--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,16 @@ jobs:
           name: Package into jar
           command: mvn clean package
       - run:
-          name: Build and push to docker image to Docker Hub
+          name: Build Docker Image
+          command: |
+            cd .. && docker build -t mattgraygithub/books:${CIRCLE_SHA1} .
+            docker tag mattgraygithub/books:${CIRCLE_SHA1} mattgraygithub/books:latest
+      - run:
+          name: Push docker image to Docker Hub
           command: |
               echo "$DOCKER_HUB_PASS" | docker login -u "$DOCKER_HUB_USER_NAME" --password-stdin
-              mvn clean compile jib:build -Dimage=$DOCKER_HUB_USER_NAME/books:$CIRCLE_BUILD_NUM
+              docker push mattgraygithub/books:${CIRCLE_SHA1}
+              docker push mattgraygithub/books:latest
       - store_artifacts:
           path: target/classes
           destination: books
