--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,13 @@ jobs:
     steps:
       - checkout:
           path: ~/project
-      - restore_cache:
-          keys:
-            - books-{{ checksum "pom.xml" }}
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: books-{{ checksum "pom.xml" }}
+#      - restore_cache:
+#          keys:
+#            - books-{{ checksum "pom.xml" }}
+#      - save_cache:
+#          paths:
+#            - ~/.m2
+#          key: books-{{ checksum "pom.xml" }}
       - run: mvn dependency:go-offline
       - run:
           name: Run Tests
@@ -21,15 +21,26 @@ jobs:
       - run:
           name: Package into jar
           command: mvn clean package
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
-          name: Build Docker Image
-          command: |
-            docker build -t mattgraydh/books:${CIRCLE_SHA1} .
-            docker tag mattgraydh/books:${CIRCLE_SHA1} mattgraydh/books:latest
+          name: Login to DockerHub
+          command: docker login -u $DOCKER_HUB_USER_NAME -p $DOCKER_HUB_PASS
       - run:
-          name: Push docker image to Docker Hub
-          command: |
-              echo "$DOCKER_HUB_PASS" | docker login -u "$DOCKER_HUB_USER_NAME" --password-stdin
-              docker push mattgraydh/books:${CIRCLE_SHA1}
-              docker push mattgraydh/books:latest
+          name: Build and Push Docker Image to Docker Hub
+          command: mvn clean compile jib:build -Dimage=books:$CIRCLE_BUILD_NUM
+
+
+
+
+#      - run:
+#          name: Build Docker Image
+#          command: |
+#            docker build -t mattgraydh/books:${CIRCLE_SHA1} .
+#            docker tag mattgraydh/books:${CIRCLE_SHA1} mattgraydh/books:latest
+#      - run:
+#          name: Push docker image to Docker Hub
+#          command: |
+#              echo "$DOCKER_HUB_PASS" | docker login -u "$DOCKER_HUB_USER_NAME" --password-stdin
+#              docker push mattgraydh/books:${CIRCLE_SHA1}
+#              docker push mattgraydh/books:latest
