--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,5 @@ jobs:
             command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
 
         - run:
-            name: Run application
-            command: sudo service docker start
+            name: Run docker container
+            command: sudo docker run -p 80:8080 mattgraydh/books
