--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
         - run:
             name: Connect to EC2 instance
-            command: ssh -i ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
+            command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
 
         - run:
             name: Run docker container
