--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,43 +26,43 @@ jobs:
             echo "$DOCKER_HUB_PASS" | docker login -u "$DOCKER_HUB_USER_NAME" --password-stdin
             docker push mattgraydh/books:${CIRCLE_SHA1}
             docker push mattgraydh/books:latest
-    deploy:
-      steps:
-        - run:
-          name: Install AWS CLI
-          command: curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-            unzip awscli-bundle.zip
-            ./awscli-bundle/install -b ~/bin/aws
-
-        - run:
-            name: Get public IP of current CircleCI runner
-            command: PUBLIC_IP=$(curl ipinfo.io/ip)
-
-        - run:
-            name: Get AWS Region
-            command: AWS_REGION=us-east-1
-
-        - run:
-            name: Get SG ID
-            command: SG_ID=sg-063c0f062b90d3bad
-
-        - run:
-            name: Add an ingress rule to the security group
-            command: ~/bin/aws ec2 authorize-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
-              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
-
-        - run:
-            command: sleep 5
-
-        - run:
-            name: Connect to EC2 instance
-            command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
-
-        - run:
-            name: Run docker container
-            command: sudo docker run -p 80:8080 mattgraydh/books
-
-        - run:
-            name: Remove ingress rule
-            command: ~/bin/aws ec2 revoke-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
-              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
+#    deploy:
+#      steps:
+#        - run:
+#          name: Install AWS CLI
+#          command: curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+#            unzip awscli-bundle.zip
+#            ./awscli-bundle/install -b ~/bin/aws
+#
+#        - run:
+#            name: Get public IP of current CircleCI runner
+#            command: PUBLIC_IP=$(curl ipinfo.io/ip)
+#
+#        - run:
+#            name: Get AWS Region
+#            command: AWS_REGION=us-east-1
+#
+#        - run:
+#            name: Get SG ID
+#            command: SG_ID=sg-063c0f062b90d3bad
+#
+#        - run:
+#            name: Add an ingress rule to the security group
+#            command: ~/bin/aws ec2 authorize-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
+#              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
+#
+#        - run:
+#            command: sleep 5
+#
+#        - run:
+#            name: Connect to EC2 instance
+#            command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
+#
+#        - run:
+#            name: Run docker container
+#            command: sudo docker run -p 80:8080 mattgraydh/books
+#
+#        - run:
+#            name: Remove ingress rule
+#            command: ~/bin/aws ec2 revoke-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
+#              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
