--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,20 @@ jobs:
             echo "$DOCKER_HUB_PASS" | docker login -u "$DOCKER_HUB_USER_NAME" --password-stdin
             docker push mattgraydh/books:${CIRCLE_SHA1}
             docker push mattgraydh/books:latest
-#    deploy:
-#      steps:
+  deploy:
+    steps:
+      - run:
+          name: Connect to EC2 instance
+          command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
+
+      - run:
+          name: Run docker container
+          command: sudo docker run -p 80:8080 mattgraydh/books
+
+
+
+
+
 #        - run:
 #          name: Install AWS CLI
 #          command: curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
@@ -53,15 +65,12 @@ jobs:
 #
 #        - run:
 #            command: sleep 5
-#
-#        - run:
-#            name: Connect to EC2 instance
-#            command: ssh ec2-user@ec2-18-212-105-75.compute-1.amazonaws.com
-#
-#        - run:
-#            name: Run docker container
-#            command: sudo docker run -p 80:8080 mattgraydh/books
-#
+
+
+
+
+
+
 #        - run:
 #            name: Remove ingress rule
 #            command: ~/bin/aws ec2 revoke-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
