--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,10 @@ workflows:
     jobs:
       - build
       - aws-ecr/build-and-push-image:
+          requires:
+            - build
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
-          tag: "latest"
+          tag: "${CIRCLE_SHA1}"
 
       - aws-ecs/deploy-service-update:
           requires:
