--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,28 +5,37 @@ orbs:
   aws-ecs: circleci/aws-ecs@1.4.0
 
 jobs:
-  working_directory: ~/project
-  docker:
-    - image: circleci/openjdk:8-jdk
-  steps:
-    - checkout:
-        path: ~/project
-    - setup_remote_docker
-    - run: mvn dependency:go-offline
-    - run:
-      name: Run Tests
-      command: mvn verify
-    - run:
-      name: Package into jar
-      command: mvn clean package
+  build:
+    working_directory: ~/project
+    docker:
+      - image: circleci/openjdk:8-jdk
+    steps:
+      - checkout:
+          path: ~/project
+      - setup_remote_docker
+      - run: mvn dependency:go-offline
+      - run:
+          name: Run Tests
+          command: mvn verify
+      - run:
+          name: Package into jar
+          command: mvn clean package
+      - persist_to_workspace:
+          root: .
+          paths:
+            - target
 
-    - aws-ecr/build-and-push-image:
-        repo: "${AWS_RESOURCE_NAME_PREFIX}"
-        tag: "${CIRCLE_SHA1}"
+workflows:
+  build-and-deploy:
+    jobs:
+      - build
+      - aws-ecr/build-and-push-image:
+          repo: "${AWS_RESOURCE_NAME_PREFIX}"
+          tag: "${CIRCLE_SHA1}"
 
-    - aws-ecs/deploy-service-update:
-        requires:
-          - aws-ecr/build-and-push-image
-        family: "${AWS_RESOURCE_NAME_PREFIX}-service"
-        cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
-        container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image
+          family: "${AWS_RESOURCE_NAME_PREFIX}-service"
+          cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
+          container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"
