--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ workflows:
     jobs:
       - build
       - aws-ecr/build-and-push-image:
+          requires:
+            - build
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
 
