--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,9 @@ jobs:
           name: Package into jar
           command: mvn clean package
       - persist_to_workspace:
-          root: ~/project
+          root: ./
           paths:
-            - target/*.jar
-            - app.jar
+            - target/
 
 workflows:
   build-and-deploy:
