--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - store_artifacts:
           path: /target
       - persist_to_workspace:
-          root: .
+          root: ~/project
           paths:
             - /target
 
