--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,10 @@ jobs:
       - run:
           name: Package into jar
           command: mvn clean package
-      - store_artifacts:
-          path: target/*.jar
       - persist_to_workspace:
-          root: ~/project/target
+          root: ./
           paths:
-            - app.jar
+            - target/
 
 workflows:
   build-and-deploy:
