--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ workflows:
       - aws-ecr/build-and-push-image:
           requires:
             - build
+          account-url: AWS_ECR_ACCOUNT_URL
+          region: "${AWS_REGION}"
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
 
