Correct root and target

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
           name: Package into jar
           command: mvn clean package
       - persist_to_workspace:
-          root: .
+          root: ./
           paths:
-            - target
+            - .
 
 workflows:
   build-and-deploy:
